# baby-sub

./: CMakeLists.txt  README.md  baby_type.h  simplifier.cc  simplifier.h  test.cc  typer.cc  typer.h
parser/: expression.h  lex.cc  lex.h  parser.cc  parser.h
